--- a/admin/src/web/templates/team/index.html
+++ b/admin/src/web/templates/team/index.html
@@ -45,17 +45,15 @@
     </select>
   </div>
   <button type="submit" class="btn btn-primary"
-    style="background-color: #007bff; border-color: #007bff;">Buscar
-    <i class="fas fa-search"></i>
+    style="background-color: #007bff; border-color: #007bff;"><i class="fas fa-search"></i> Buscar
   </button>
   <a href="{{ url_for('team.index') }}" class="btn btn-secondary"
-    style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros
-    <i class="fas fa-eraser"></i>
+    style="background-color: #6c757d; border-color: #6c757d;"><i class="fas fa-eraser"></i> Limpiar filtros
   </a>
 </form>
 
 <a href="{{ url_for('team.create') }}" class="btn btn-primary" style="margin-top: 10px; margin-bottom: 20px;">
-  Crear nuevo miembro <i class="fas fa-user-plus"></i>
+  <i class="fas fa-user-plus"></i> Crear nuevo miembro 
 </a>
 
 <table class="table table-striped"
