--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -96,6 +96,7 @@
 </script>
 {%endblock%}
 
+{% block styles %}
 <style>
     body {
         background-color: #f8f9fa;
@@ -195,6 +196,7 @@
         border-radius: 5px;
     }
 </style>
+{% endblock %}
 {% endblock %}
 {% block footer %}
 {% endblock %}
