--- a/admin/src/web/templates/jya/create.html
+++ b/admin/src/web/templates/jya/create.html
@@ -306,7 +306,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="has_guardianship" class="mb-1">¿Tiene tutela legal?</label>
+                    <label for="has_guardianship" class="mb-1">¿Tiene curantela?</label>
                     <select class="form-select" id="has_guardianship" name="has_guardianship" required>
                         <option disabled selected>Seleccione una opción...</option>
                         <option value="True">Sí</option>
