--- a/admin/src/web/templates/user/index.html
+++ b/admin/src/web/templates/user/index.html
@@ -57,8 +57,8 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-primary" style="background-color: #007bff; border-color: #007bff;">Buscar</button>
-        <a href="{{ url_for('team.index') }}" class="btn btn-secondary" style="background-color: #6c757d; border-color: #6c757d;">Limpiar filtros</a>
+        <button type="submit" class="btn btn-primary" style="background-color: #007bff; border-color: #007bff;"><i class="fas fa-search"></i> Buscar</button>
+        <a href="{{ url_for('team.index') }}" class="btn btn-secondary" style="background-color: #6c757d; border-color: #6c757d;"> <i class="fas fa-eraser"></i> Limpiar filtros</a>
     
     </form>
     <!-- Fin de formulario de búsqueda -->
